# speedtest-rs

./: Cargo.toml  README.md
examples/: main.rs
speedtest-rs-cli/: Cargo.toml
speedtest-rs-cli/src/: event.rs  main.rs  ui.rs
speedtest-rs-cli/src/app/: download.rs  fetch_config.rs  fetch_servers.rs  mod.rs  progress.rs  select_fastest_server.rs  upload.rs
speedtest-rs-core/: Cargo.toml
speedtest-rs-core/examples/: main.rs
speedtest-rs-core/src/: lib.rs  model.rs  speed_tester.rs
src/: speed_tester.rs  urls.rs
