[package]
name = "speedtest-rs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
futures = "0.3.31"
quick-xml = { version = "0.38.3", features = ["serialize"] }
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
serde = "1.0.219"
tokio = { version = "1.47.1", default-features = false }
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
